--- a/photo-js.html
+++ b/photo-js.html
@@ -6,9 +6,9 @@
 		<script>
 		$(document).ready(
 			function () {
-				$("gallery li img").hover(function)(){
+				$("#gallery li img").hover(function(){
 					$("#main-img").attr('src',$(this).attr('src').replace('thumb/',''));
-				};
+				});
 			});
 		</script>
 		<link href= "photo.css" rel="stylesheet">
