--- a/about.html
+++ b/about.html
@@ -9,9 +9,11 @@
 		<nav class="navigation">
 			<a href="index.html" class="left">Bernice Liu</a>
 			<a href="about.html" target="_blank" id="right">About Me</a>
+			<a href ="project.html" id="otherright">Projects</a>
 		</nav>
 		<article class="left">
-			This is a website about me. 
+			<p>Hi! My name is Bernice Liu and I am a senior attending Lowell High School. My parents are from China and I have an older and younger sister, one who is at UCI and another who is also attending Lowell. My parents have creatively labeled us the ‘ABC’ girls because my older sister’s name is Amanda, mine is Bernice, and my younger sister is named Claudia. I can speak Cantonese and Mandarin fluently but also hope to learn Spanish and Korean. </p>
+			<p>Hello</p>
 		</article>
 	</body>
 </html>
